--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,8 @@
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
+    "validator": "^13.9.0",
+    "validator-js": "^0.2.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.5",
+    "@types/validator": "^13.9.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
